--- a/html-css/exos00/exo02/style.css
+++ b/html-css/exos00/exo02/style.css
@@ -5,7 +5,7 @@ div{
     height: 375px;
     padding: 0px 0px 150px 0px;
     border-radius: 2%;
-    box-shadow:5px 5px 0.3em rgba(0, 0, 0, 0.329);
+    box-shadow:5px 5px 0.3em rgba(0, 0, 0, 0.329)
 }
 h2{
     margin:20px 0px 20px 10px;
