--- a/html-css/exos final/style.less
+++ b/html-css/exos final/style.less
@@ -11,36 +11,356 @@
 //header
 header{
     display: flex;
-    width: 100%;
 height: 500px;
     flex-direction:column;
     align-items: center;
 background: url(./image/header.jpg);
+background-size: 100%;
 background-repeat: no-repeat;
 .tete{
         display:flex;
         flex-direction: row;
         justify-content: space-between;
-        width: 100%;
+        width: 150vh;
+        height: 10vh;
+        align-self: flex-start;
         img{
             align-self: center;
-            padding-left: 100px;
+            padding-left: 10vh;
         }
-        ul{
+        .liens{
             display: flex;
             flex-direction: row;
-            align-self: center;
+            align-self: flex-start;
             padding-right: 300px;
-            li{
+            a{
                 padding-left: 50px;
                 color: white;
-                list-style-type: none;
+                text-decoration: none;
                 
             }
         }
     
+      
+    }
+.tete2{
+    display: flex;
+    flex-direction: column;
+    width: 50vh;
+    height: 30vh; 
+    align-items: center;
+    justify-content: center; 
+    color: white;
+    
+    
+     img{
+        padding-top: 10px;
+        padding-bottom: 10px;
+        width: 200px;
+    }
+    p{
+        font-style: normal;
+font-weight: 400;
+font-size: 15px;
+line-height: 18px;
+
+color: #FFFFFF;
+    }
+}
+
+    
+}
+.sec{
+    display: flex;
+    padding-top: 30px;
+    padding-left: 200px;
+    padding-bottom: 30px;
+    justify-content: center;
+    .mont{
+        display: flex;
+    flex: 1;
+    height: 50vh;
+    margin-right: 15px;
+    }   
+    .div1{
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: center;
+        margin-left: 100px;
+        flex: 3;
+        margin-right: 300px;
+        
+    }
+    h2{
+        display: flex;
+    }
+    .topp{
+        display: flex;
+        padding-top: 50px;
+        font-style: normal;
+font-weight: 300;
+font-size: 16px;
+line-height: 19px;
+
+color: #2D6187;
+    }
+    .bott{
+        padding-top: 50px;
+        font-style: normal;
+font-weight: 300;
+font-size: 16px;
+line-height: 19px;
+
+color: #2D6187;
+    }
+    .div2{
+        border: 1px solid black;
+        margin-top: 20px;
+        a{
+            color: black;
+            text-decoration: none;
+        }
+    }
+    
+
+}
+article{
+    display: flex;
+    background-color:  #E5F5E5;
+    flex-direction: column;
+    align-items: center;
+    height: 500px;
+ .text{
+    display: flex;
+    flex-direction: column;
+    width: 80vh;
+    h2{
+        display: flex;
+        align-self: center;
+        padding-bottom: 10px;
+        font-style: normal;
+font-weight: 400;
+font-size: 36px;
+line-height: 42px;
+    }
+    p{
+        text-align: center;
+        font-style: normal;
+font-weight: 400;
+font-size: 15px;
+line-height: 18px;
+
+color: #2D6187;
+    }
+ }   
+ img{
+    padding-left: 50px;
+    padding-top: 20px;
+ }
+ .ul1{
+    display: flex;
+    flex-direction: row;
+    width: 100vh;
+    justify-content: space-between;
+    list-style-type: none;
+    padding-top: 10px;
+    .li1{
+        display: flex;
+        padding-left: 80px;
+    }
+    
+ }
+ .ul2{
+    display: flex;
+    flex-direction: row;
+    width: 100vh;
+    justify-content: space-between;
+    list-style-type: none;
+    
+ }
+}
+aside{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 500px;
+    div{
+        display: flex;
+        flex-direction: row;
+        column-gap: 30px;
+        
+        width: 80vh;
+          .piscine{
+            background: #FFFFFF;
+border: 1px solid #28ABB9;
+border-radius: 0px 0px 0px 20px;
+display: flex;
+flex-direction: column;
+padding-left: 20px;
+
+          }
+          .wifi{
+           
+            background: #FFFFFF;
+            border: 1px solid #28ABB9;
+            border-radius: 0px 0px 0px 20px;
+            display: flex;
+            flex-direction: column;
+            padding-left: 20px;
+          }
+          .resto{
+            background: #FFFFFF;
+            border: 1px solid #28ABB9;
+            border-radius: 0px 0px 0px 20px;
+            display: flex;
+            flex-direction: column;
+            padding-left: 20px;
+          }
+          
     }
 
 
-    
+}
+.herb{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 300px;
+    background: url(./image/hebergement.jpg);
+    .h21{
+        
+font-style: normal;
+font-weight: 400;
+font-size: 32px;
+line-height: 38px;
+
+color: #FFFFFF;
+
+
+    }
+    .h22{
+        font-style: normal;
+font-weight: 400;
+font-size: 48px;
+line-height: 56px;
+
+color: #FFFFFF;
+padding-top: 20px;
+padding-bottom: 20px;
+
+    }
+    button{
+        width: 200px;
+        height: 50px;
+        background: #28ABB9;
+box-shadow: 0px -3px 4px rgba(0, 0, 0, 0.25), 0px 3px 3px 1px rgba(0, 0, 0, 0.25);
+border-radius: 6px;
+    }
+    a{
+        color: white;
+        text-decoration: none;
+    }
+
+}
+footer{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 500px;
+    .div1{
+        text-align: center;
+        h2{
+            padding-bottom: 20px;
+            font-style: normal;
+font-weight: 400;
+font-size: 36px;
+line-height: 42px;
+
+color: #000000;
+        }
+        p{
+            font-style: normal;
+            font-weight: 400;
+            font-size: 16px;
+            line-height: 19px;
+            
+            color: #2D6187; 
+        }
+    }
+    .div4{
+        display: flex;
+        column-gap: 20px;
+        padding-top: 100px;
+       
+        .haut{
+            display: flex;
+            align-self: flex-start;
+            margin-left: 10px;
+        }
+            .bas{
+                display: flex;
+                align-self: flex-end;
+                margin-right: 20px;
+            }
+           p{
+            margin-left: 10px;
+
+           } 
+           h4{
+            padding-top: 10px;
+            display: flex;
+            align-self: flex-start;
+            margin-left: 10px;
+            font-style: normal;
+font-weight: 400;
+font-size: 16px;
+line-height: 19px;
+
+color: #2D6187;
+
+
+           }
+
+    }
+    .div2{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        width: 458px;
+        height: 200px;
+        background-color: #A8DDA8;
+border-radius: 0px 0px 0px 24px;
+
+    }
+    .div3{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        width: 458px;
+        height: 200px;
+        background-color: #A8DDA8;
+border-radius: 0px 0px 0px 24px;
+    }
+    .ed{position: absolute;
+        width: 136px;
+        height: 136px;
+        top: 2500px;
+        left: 400px;
+        
+
+    }
+    .mik{
+        position: absolute;
+        width: 136px;
+        height: 136px;
+        top: 2500px;
+        left: 900px;
+    }
+
 }
