--- a/html-css/exos final/style.less
+++ b/html-css/exos final/style.less
@@ -4,7 +4,7 @@
     padding: 0;
 }
 .container{
-    height: 800px;
+    height: 2000px;
     width: 100%;
 
 }
@@ -199,6 +199,7 @@ border-radius: 0px 0px 0px 20px;
 display: flex;
 flex-direction: column;
 padding-left: 20px;
+height: 200px;
 
           }
           .wifi{
@@ -209,6 +210,7 @@ padding-left: 20px;
             display: flex;
             flex-direction: column;
             padding-left: 20px;
+            height: 200px;
           }
           .resto{
             background: #FFFFFF;
@@ -217,6 +219,7 @@ padding-left: 20px;
             display: flex;
             flex-direction: column;
             padding-left: 20px;
+            height: 200px;
           }
           
     }
@@ -287,14 +290,14 @@ color: #000000;
             font-weight: 400;
             font-size: 16px;
             line-height: 19px;
-            
+            padding-bottom: 100px;
             color: #2D6187; 
         }
     }
     .div4{
         display: flex;
         column-gap: 20px;
-        padding-top: 100px;
+        
        
         .haut{
             display: flex;
@@ -346,21 +349,6 @@ border-radius: 0px 0px 0px 24px;
         height: 200px;
         background-color: #A8DDA8;
 border-radius: 0px 0px 0px 24px;
-    }
-    .ed{position: absolute;
-        width: 136px;
-        height: 136px;
-        top: 2500px;
-        left: 400px;
-        
-
-    }
-    .mik{
-        position: absolute;
-        width: 136px;
-        height: 136px;
-        top: 2500px;
-        left: 900px;
     }
 
 }
