--- a/html-css/exos final/style.less
+++ b/html-css/exos final/style.less
@@ -117,9 +117,16 @@ color: #2D6187;
     .div2{
         border: 1px solid black;
         margin-top: 20px;
+        height: 50px;
+        width: 150px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
         a{
             color: black;
             text-decoration: none;
+            padding-right: 10px;
         }
     }
     
@@ -130,7 +137,7 @@ article{
     background-color:  #E5F5E5;
     flex-direction: column;
     align-items: center;
-    height: 500px;
+    height: 600px;
  .text{
     display: flex;
     flex-direction: column;
@@ -143,6 +150,7 @@ article{
 font-weight: 400;
 font-size: 36px;
 line-height: 42px;
+padding-top: 30px;
     }
     p{
         text-align: center;
@@ -177,7 +185,8 @@ color: #2D6187;
     width: 100vh;
     justify-content: space-between;
     list-style-type: none;
-    
+
+color: #28ABB9;
  }
 }
 aside{
@@ -186,6 +195,10 @@ aside{
     justify-content: center;
     align-items: center;
     height: 500px;
+    width: 100%;
+    .ttr{
+        padding-bottom:  40px;
+    }
     div{
         display: flex;
         flex-direction: row;
@@ -200,6 +213,8 @@ display: flex;
 flex-direction: column;
 padding-left: 20px;
 height: 200px;
+width: 80vh;
+padding-top: 10px;
 
           }
           .wifi{
@@ -211,6 +226,8 @@ height: 200px;
             flex-direction: column;
             padding-left: 20px;
             height: 200px;
+            width: 80vh;
+            padding-top: 10px;
           }
           .resto{
             background: #FFFFFF;
@@ -220,6 +237,8 @@ height: 200px;
             flex-direction: column;
             padding-left: 20px;
             height: 200px;
+            width: 80vh;
+            padding-top: 10px;
           }
           
     }
