--- a/html-css/exos final/style.css
+++ b/html-css/exos final/style.css
@@ -105,17 +105,23 @@ header .tete2 p {
 .sec .div2 {
   border: 1px solid black;
   margin-top: 20px;
+  height: 50px;
+  width: 150px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .sec .div2 a {
   color: black;
   text-decoration: none;
+  padding-right: 10px;
 }
 article {
   display: flex;
   background-color: #E5F5E5;
   flex-direction: column;
   align-items: center;
-  height: 500px;
+  height: 600px;
 }
 article .text {
   display: flex;
@@ -130,6 +136,7 @@ article .text h2 {
   font-weight: 400;
   font-size: 36px;
   line-height: 42px;
+  padding-top: 30px;
 }
 article .text p {
   text-align: center;
@@ -161,6 +168,7 @@ article .ul2 {
   width: 100vh;
   justify-content: space-between;
   list-style-type: none;
+  color: #28ABB9;
 }
 aside {
   display: flex;
@@ -168,6 +176,10 @@ aside {
   justify-content: center;
   align-items: center;
   height: 500px;
+  width: 100%;
+}
+aside .ttr {
+  padding-bottom: 40px;
 }
 aside div {
   display: flex;
@@ -183,6 +195,8 @@ aside div .piscine {
   flex-direction: column;
   padding-left: 20px;
   height: 200px;
+  width: 80vh;
+  padding-top: 10px;
 }
 aside div .wifi {
   background: #FFFFFF;
@@ -192,6 +206,8 @@ aside div .wifi {
   flex-direction: column;
   padding-left: 20px;
   height: 200px;
+  width: 80vh;
+  padding-top: 10px;
 }
 aside div .resto {
   background: #FFFFFF;
@@ -201,6 +217,8 @@ aside div .resto {
   flex-direction: column;
   padding-left: 20px;
   height: 200px;
+  width: 80vh;
+  padding-top: 10px;
 }
 .herb {
   display: flex;
