--- a/html-css/exos final/style.css
+++ b/html-css/exos final/style.css
@@ -32,11 +32,13 @@ header .tete .liens {
   display: flex;
   width: 100vh;
   flex-direction: row;
-  align-self: flex-start;
-  padding-right: 300px;
+  justify-content: space-between;
+  align-self: center;
+  padding-right: 10px;
 }
 header .tete .liens a {
   padding-left: 50px;
+  padding-top: 5%;
   color: white;
   text-decoration: none;
 }
@@ -402,11 +404,15 @@ footer .div3 {
   article .ul3 {
     display: flex;
     width: 300px;
+    padding: 30px;
   }
   article .ul1 {
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
     row-gap: 30px;
+  }
+  article .ul1 .li1 {
+    padding: 0px;
   }
   article .ul2 {
     flex-direction: column;
@@ -471,5 +477,7 @@ footer .div3 {
     display: flex;
     flex-direction: column;
     row-gap: 30px;
+    padding-right: 10px;
+    padding-bottom: 10px;
   }
 }
