--- a/html-css/exos final/style.less
+++ b/html-css/exos final/style.less
@@ -37,11 +37,15 @@ header {
             display: flex;
             width: 100vh;
             flex-direction: row;
-            align-self: flex-start;
-            padding-right: 300px;
+            justify-content: space-between;
+            align-self: center;
+            padding-right: 10px;
+        
+            
 
             a {
                 padding-left: 50px;
+                padding-top: 5%;
                 color: white;
                 text-decoration: none;
 
@@ -495,11 +499,17 @@ footer {
         .ul3{
             display: flex;
             width: 300px;
+            padding: 30px;
+            
         }
         .ul1{
             flex-direction: column;
-            align-items: center;
+            align-items: flex-start;
             row-gap: 30px;
+            .li1{
+                padding: 0px;
+            }
+            
         }
         .ul2{
             flex-direction: column;
@@ -568,6 +578,8 @@ footer {
             display: flex;
             flex-direction: column;
             row-gap: 30px;
+            padding-right: 10px;
+            padding-bottom: 10px;
 
         }
 
