--- a/html-css/legend/style.less
+++ b/html-css/legend/style.less
@@ -40,7 +40,6 @@ section{
     row-gap: 20px;
     background-color: #3E3838;
     #pintro{
-        display: flex;
         
         height: 195px;
         width: 741px;
@@ -54,7 +53,7 @@ letter-spacing: -0.01em;
 color: #D4CC77;
 
     }
-    #intro{
+    h2{
         font-family: 'Inter';
 font-style: normal;
 font-weight: 400;
