--- a/html-css/extreme/style.less
+++ b/html-css/extreme/style.less
@@ -28,11 +28,13 @@ header{
             width: 220px;
             height: 40px;
             
-            img{
-                background-color:#421E09;
-                
-                
-                
+            div{
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                height: 40px;
+                width: 40px;
+                background-color: #421E09;
             }
         }
     }
@@ -84,6 +86,7 @@ height: 59px;
         column-gap: 20px;
         padding-bottom: 35px;
         .big1{
+            border-top: #F1720B 1px solid;
             height: 250px;
             width: 470px;
             background: url(./image/barefoot.jpg);
@@ -126,7 +129,7 @@ color: #FFFFFF;
                 flex-direction: column;
                 align-items: center;
                 justify-content: center;
-                margin-bottom: 30px;
+                margin-bottom: 10px;
                 a{
                     color: white;
                     text-decoration: none;
@@ -135,6 +138,7 @@ color: #FFFFFF;
             }
         }
         .big2{
+            border-top: #F1720B 1px solid;
             height: 250px;
             width: 470px;
             background: url(./image/sky.jpg);
@@ -358,5 +362,292 @@ margin-top: 20px;
         width: 1051px;
         height: 326px;
         display: flex;
+        column-gap: 20px;
+        .div3{
+            height: 300px;
+            
+           p{
+            font-family: 'Inter';
+font-style: normal;
+font-weight: 400;
+font-size: 16px;
+line-height: 30px;
+margin-bottom: 30px;
+/* or 100% */
+
+
+color: #000000;
+           } 
+           button{
+            width: 165px;
+            height: 40px;
+            background-color: #F1720B;
+            border: none;
+            a{
+                text-decoration: none;
+                color: white;
+                font-family: 'Inter';
+font-style: normal;
+font-weight: 400;
+font-size: 17px;
+line-height: 25px;
+            }
+           }
+        }
+        .div4{
+            height: 300px;
+            
+           p{
+            font-family: 'Inter';
+            font-style: normal;
+            font-weight: 400;
+            font-size: 15px;
+            line-height: 29px;
+
+
+color: #000000;
+           } 
+           button{
+            margin-top: 40px;
+            width: 165px;
+            height: 40px;
+            background-color: #F1720B;
+            border: none;
+            a{
+                text-decoration: none;
+                color: white;
+                font-family: 'Inter';
+font-style: normal;
+font-weight: 400;
+font-size: 17px;
+line-height: 25px;
+            }
+           }
+        }
+    }
+}
+.part3{
+    width: 1600px;
+    height: 450px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: url(./image/bg_sav.jpg);
+    .div1{
+        width: 950px;
+        height: 380px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        column-gap: 20px;
+        div{
+            width: 300px;
+            height: 349px;
+            background-color: #D9D9D9;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: flex-start;
+            row-gap: 30px;
+            padding-left: 20px;
+            p{
+                width: 250px;
+                font-family: 'Inter';
+font-style: normal;
+font-weight: 400;
+font-size: 27px;
+line-height: 35px;
+/* or 93% */
+
+
+color: #000000;
+            }
+            button{
+                width: 165px;
+                height: 40px;
+                background-color: #F1720B;
+                border: none;
+                a{
+                    text-decoration: none;
+                    color: white;
+                    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 17px;
+    line-height: 25px;
+                }
+               }
+        }
+    }
+
+
+}
+.part4{
+    width: 1600px;
+    height: 600px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    .div1{
+        width: 1100px;
+        height: 462px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        .div2{
+            height: 150px;
+            width: 1075px;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+h2{
+    font-family: 'Inter';
+font-style: normal;
+font-weight: 400;
+font-size: 38px;
+line-height: 25px;
+/* or 66% */
+
+
+color: #F1720B;
+margin-bottom: 20px;
+}
+p{
+    font-family: 'Inter';
+font-style: normal;
+font-weight: 400;
+font-size: 19px;
+line-height: 34px;
+/* or 179% */
+
+
+color: #838383;
+width: 915px;
+}
+        }
+        .div3{
+            height: 277px;
+            width:1300px ;
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            align-items: center;
+            column-gap: 20px;
+            .div4{
+                width: 490px;
+                height: 250px;
+                display: flex;
+                flex-direction: column;
+                align-items: flex-start;
+                row-gap: 20px;
+             .p1{
+                font-family: 'Inter';
+font-style: normal;
+font-weight: 400;
+font-size: 15px;
+line-height: 30px;
+/* or 200% */
+
+
+color: #000000;
+width: 450px;
+             }
+             .p2{
+                font-family: 'Inter';
+font-style: normal;
+font-weight: 400;
+font-size: 15px;
+line-height: 30px;
+/* or 200% */
+
+
+color: #000000;
+width: 450px ;
+
+             }
+            }
+            .div5{
+                width: 490px;
+                height: 250px;
+                display: flex;
+                flex-direction: column;
+                align-items: flex-start;
+                p{
+                    font-family: 'Inter';
+font-style: normal;
+font-weight: 400;
+font-size: 15px;
+line-height: 30px;
+/* or 200% */
+
+
+color: #000000;
+width: 410px;
+                }
+            }
+
+        }
+
+    }
+}
+footer{
+    width: 1600px;
+    height: 268px;
+    display: flex;
+    justify-content: flex-start;
+    padding-left: 300px;
+    align-items: center;
+    background-color: #303030;
+    .div1{
+        width: 690px;
+        height: 220px;
+        display:flex;
+        justify-content: flex-start;
+        flex-direction: column;
+        align-items: center;
+       .div2{
+        height: 145px;
+        width: 680px;
+        display: flex;
+        justify-content: space-between;
+        ul{
+            margin-right: 100px;
+            list-style-type: none;
+            font-family: 'Inter';
+font-style: normal;
+font-weight: 400;
+font-size: 15px;
+line-height: 30px;
+/* or 200% */
+
+
+color: #FFFFFF;
+span{
+    color: #F1720B;
+}
+        }
+        
+       }
+    }
+    .div3{
+        height: 80px;
+        width: 680px;
+        display: flex;
+        align-items: center;
+        p{
+            font-family: 'Inter';
+font-style: normal;
+font-weight: 400;
+font-size: 15px;
+line-height: 30px;
+/* or 200% */
+
+
+color: #FFFFFF;
+        }
+
     }
 }
