--- a/html-css/extreme/style.css
+++ b/html-css/extreme/style.css
@@ -30,7 +30,12 @@ header .tete .logo {
   width: 220px;
   height: 40px;
 }
-header .tete .logo img {
+header .tete .logo div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 40px;
+  width: 40px;
   background-color: #421E09;
 }
 header nav {
@@ -79,6 +84,7 @@ header .big {
   padding-bottom: 35px;
 }
 header .big .big1 {
+  border-top: #F1720B 1px solid;
   height: 250px;
   width: 470px;
   background: url(image/barefoot.jpg);
@@ -117,13 +123,14 @@ header .big .big1 button {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin-bottom: 30px;
+  margin-bottom: 10px;
 }
 header .big .big1 button a {
   color: white;
   text-decoration: none;
 }
 header .big .big2 {
+  border-top: #F1720B 1px solid;
   height: 250px;
   width: 470px;
   background: url(image/sky.jpg);
@@ -320,4 +327,262 @@ article .div2 {
   width: 1051px;
   height: 326px;
   display: flex;
+  column-gap: 20px;
+}
+article .div2 .div3 {
+  height: 300px;
+}
+article .div2 .div3 p {
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 30px;
+  margin-bottom: 30px;
+  /* or 100% */
+  color: #000000;
+}
+article .div2 .div3 button {
+  width: 165px;
+  height: 40px;
+  background-color: #F1720B;
+  border: none;
+}
+article .div2 .div3 button a {
+  text-decoration: none;
+  color: white;
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 17px;
+  line-height: 25px;
+}
+article .div2 .div4 {
+  height: 300px;
+}
+article .div2 .div4 p {
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 29px;
+  color: #000000;
+}
+article .div2 .div4 button {
+  margin-top: 40px;
+  width: 165px;
+  height: 40px;
+  background-color: #F1720B;
+  border: none;
+}
+article .div2 .div4 button a {
+  text-decoration: none;
+  color: white;
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 17px;
+  line-height: 25px;
+}
+.part3 {
+  width: 1600px;
+  height: 450px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: url(image/bg_sav.jpg);
+}
+.part3 .div1 {
+  width: 950px;
+  height: 380px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  column-gap: 20px;
+}
+.part3 .div1 div {
+  width: 300px;
+  height: 349px;
+  background-color: #D9D9D9;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  row-gap: 30px;
+  padding-left: 20px;
+}
+.part3 .div1 div p {
+  width: 250px;
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 27px;
+  line-height: 35px;
+  /* or 93% */
+  color: #000000;
+}
+.part3 .div1 div button {
+  width: 165px;
+  height: 40px;
+  background-color: #F1720B;
+  border: none;
+}
+.part3 .div1 div button a {
+  text-decoration: none;
+  color: white;
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 17px;
+  line-height: 25px;
+}
+.part4 {
+  width: 1600px;
+  height: 600px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.part4 .div1 {
+  width: 1100px;
+  height: 462px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.part4 .div1 .div2 {
+  height: 150px;
+  width: 1075px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+.part4 .div1 .div2 h2 {
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 38px;
+  line-height: 25px;
+  /* or 66% */
+  color: #F1720B;
+  margin-bottom: 20px;
+}
+.part4 .div1 .div2 p {
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 19px;
+  line-height: 34px;
+  /* or 179% */
+  color: #838383;
+  width: 915px;
+}
+.part4 .div1 .div3 {
+  height: 277px;
+  width: 1300px ;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  column-gap: 20px;
+}
+.part4 .div1 .div3 .div4 {
+  width: 490px;
+  height: 250px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  row-gap: 20px;
+}
+.part4 .div1 .div3 .div4 .p1 {
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 30px;
+  /* or 200% */
+  color: #000000;
+  width: 450px;
+}
+.part4 .div1 .div3 .div4 .p2 {
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 30px;
+  /* or 200% */
+  color: #000000;
+  width: 450px ;
+}
+.part4 .div1 .div3 .div5 {
+  width: 490px;
+  height: 250px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+.part4 .div1 .div3 .div5 p {
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 30px;
+  /* or 200% */
+  color: #000000;
+  width: 410px;
+}
+footer {
+  width: 1600px;
+  height: 268px;
+  display: flex;
+  justify-content: flex-start;
+  padding-left: 300px;
+  align-items: center;
+  background-color: #303030;
+}
+footer .div1 {
+  width: 690px;
+  height: 220px;
+  display: flex;
+  justify-content: flex-start;
+  flex-direction: column;
+  align-items: center;
+}
+footer .div1 .div2 {
+  height: 145px;
+  width: 680px;
+  display: flex;
+  justify-content: space-between;
+}
+footer .div1 .div2 ul {
+  margin-right: 100px;
+  list-style-type: none;
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 30px;
+  /* or 200% */
+  color: #FFFFFF;
+}
+footer .div1 .div2 ul span {
+  color: #F1720B;
+}
+footer .div3 {
+  height: 80px;
+  width: 680px;
+  display: flex;
+  align-items: center;
+}
+footer .div3 p {
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 30px;
+  /* or 200% */
+  color: #FFFFFF;
 }
