--- a/port folio/style.css
+++ b/port folio/style.css
@@ -42,7 +42,9 @@ a:active {
 
 .section-1{
    background-color: wheat;
-    padding-top:15vh
+    padding-top:15vh;
+    height: 62vh;
+    width: 100vw;
 }
 .div-1{
     width: 100%;
@@ -55,14 +57,61 @@ a:active {
     
   height: 40vh;
   width: 40vw;
+  padding-top:15vh;
+  padding-left: 10vw;
   
-  background-color: aqua;
     
 }
 .h2-1{
-    align-self: center;
+   position: relative;
+   top: 0vh;
+   left: 0vw;
     
 }
 .h2-2{
-    justify-self: end;
+  position: relative;
+  bottom: 0vh;
+  left: 29vw;
+}
+.logo{
+  padding-left:5vw;
+}
+
+.section-2{
+    background-color:rgb(216, 216, 216);
+    height: 80vh;
+    width: 100vw;
+
+}
+.div-3{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 70vh;
+}
+.div-4 ,
+.div-5{
+  display: flex;
+  margin: 5vw;
+
+}
+.card-1 , .card-4{
+  background-color: rgb(68, 139, 139);
+  color:black;
+  width: 40vw;
+  padding-left: 5vw;
+  height: 20vh;
+  
+  
+}
+.card-2 , .card-3{
+  background-color:rgb(179, 208, 209);
+  width: 40vw;
+  padding-left: 5vw;
+  height: 20vh;
+  
+}
+.card-1 , .card-3{
+  margin-right: 1vw;
 }
