--- a/port folio/style.css
+++ b/port folio/style.css
@@ -1,5 +1,6 @@
 *{
     margin: auto;
+    max-width: 100vw;
 }
 header{
     background-color: black;
@@ -10,6 +11,7 @@ header{
     justify-content: center;
     align-items: center;
     position: fixed;
+    z-index: 10;
     
    
     
@@ -45,6 +47,7 @@ a:active {
     padding-top:15vh;
     height: 62vh;
     width: 100vw;
+    
 }
 .div-1{
     width: 100%;
@@ -72,6 +75,7 @@ a:active {
   position: relative;
   bottom: 0vh;
   left: 29vw;
+  
 }
 .logo{
   padding-left:5vw;
@@ -79,7 +83,7 @@ a:active {
 
 .section-2{
     background-color:rgb(216, 216, 216);
-    height: 80vh;
+    height: 90vh;
     width: 100vw;
 
 }
@@ -114,4 +118,97 @@ a:active {
 }
 .card-1 , .card-3{
   margin-right: 1vw;
+}
+.h2-3{
+  padding-top: 15vh;
+  font-size:xx-large ;
+}
+.section-3{
+  background-color:rgb(216, 216, 216);
+  height: 70vh;
+    width: 100vw;
+    
+
+}
+.h2-4{
+  padding-top: 5vh;
+  font-size:xx-large ;
+  text-align: center;
+  
+}
+.div-6{
+  
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 60vh;
+  width: 100vw;
+}
+
+.div-11{
+  display: flex;
+  flex-direction: column;
+}
+
+
+.div-12,.div-8{
+  display: flex;
+  width: 50vw;
+  text-align: center;
+}
+.section-4{
+  background-color: wheat;
+  height: 90vh;
+  width: 100vw;
+  
+} 
+.div-13{
+  height: 70vh;
+  width: 80vw;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.h2-5{
+  padding-top: 5vh;
+  font-size:xx-large ;
+  text-align: center;
+}
+.div-18{
+  display: flex;
+  flex-direction: column;
+}
+h3{
+  padding-top: 5vh;
+  text-align: center;
+  font-size: x-large;
+}
+.div-14{
+  
+  height: 35vh;
+  width: 20vw;
+  border: 1rem solid black;
+  border-radius: 100%;
+  background-image: url(./images/appmeteo.png);background-position: center;
+  background-size: cover;
+}
+.div-15{
+  
+  height: 35vh;
+  width: 20vw;
+  border: 1rem solid black;
+  border-radius: 100%;
+  background-image: url(./images/appmeteo.png);background-position: center;
+  background-size: cover;
+}
+.div-20{
+  
+  height: 35vh;
+  width: 20vw;
+  border: 1rem solid black;
+  border-radius: 100%;
+  background-image: url(./images/appmeteo.png);background-position: center;
+  background-size: cover;
 }
