--- a/port folio/style.css
+++ b/port folio/style.css
@@ -41,6 +41,10 @@ header nav a.active {
     width: 100vw;
     
 }
+.img-1{
+  border-radius: 5%;
+  box-shadow: 5px 5px 10px 0.3px black;
+}
 .div-1{
     width: 100%;
     display: flex;
@@ -74,7 +78,7 @@ header nav a.active {
 }
 
 .section-2{
-    background-color:rgb(94, 122, 247);
+    background-color:#282A35;
     height: 100vh;
     width: 100vw;
 
@@ -93,26 +97,27 @@ header nav a.active {
 
 }
 .card-1 , .card-4{
-  background-color: orange;
+  background-color: #297dc7;
   color:black;
   width: 40vw;
   padding-left: 2vw;
   height: 25vh;
-  border: 0.3px solid black;
+  border: 1px solid black;
   margin-left: 2vw;
-  box-shadow: 1px 1px 15px 0.3px rgb(75, 74, 74);
+  border-radius: 5%;
+  box-shadow: 5px 5px 10px 0.3px rgb(150, 150, 150);
   
   
 }
 .card-2 , .card-3{
-  background-color:rgba(49, 255, 128, 0.712);
+  background-color:rgb(163, 155, 105);
   width: 40vw;
   padding-left: 2vw;
   height: 25vh;
   border: 0.3px solid black;
   margin-left: 2vw;
-  
-  box-shadow: 1px 1px 15px 0.3px rgb(53, 53, 53);
+  border-radius: 5%;
+  box-shadow: 5px 5px 10px 0.3px rgb(150, 150, 150);
   
 }
 .card-1 , .card-3{
@@ -123,9 +128,10 @@ header nav a.active {
   font-size:xx-large ;
 }
 .section-3{
-  background-color:rgb(216, 216, 216);
+  background-color:#282A35;
   height: 100vh;
     width: 100vw;
+    color: white;
     
 
 }
@@ -220,11 +226,11 @@ h3{
   background-size: cover;
 }
 .a2{
-  color: black;
+  color: white;
   text-decoration: none;
 }
 .a2:visited{
-  color: black;
+  color: white;
   text-decoration: none;
 }
 .div-14:hover,.div-15:hover,.div-20:hover{
@@ -247,6 +253,10 @@ h5{
 .img-3:hover{
   transform: scale(1.1);
   transition: all 0.2s ease-in-out;
+}
+.a3{
+  color: black;
+
 }
 .reveal {
   position: relative;
