--- a/port folio/style.css
+++ b/port folio/style.css
@@ -1,6 +1,7 @@
 *{
     margin: auto;
     max-width: 100vw;
+    box-sizing: border-box;
 }
 html {
   scroll-behavior: smooth;
@@ -271,3 +272,56 @@ h5{
   opacity: 1;
 }
 
+@media only screen and (max-width: 414px) {
+header{
+  height: 15vh;
+}
+
+
+.section-1{
+  height: 125vh;
+}
+.div-1{
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding-right: 10%;
+}
+.logo{
+  width: 50vw;
+}
+.img-1{
+  width: 75%;
+  margin-left: 10vw;
+}
+
+.card-1,.card-2,.card-3,.card-4{
+  overflow: scroll;
+}
+.section-4{
+  height: 150vh;
+  padding-top: 30vh;
+}
+.div-13{
+  flex-direction: column;
+}
+.div-18,.div-14,.div-13,.div-20,.div-15{
+  width: 50vw;
+  
+}
+h3{
+  padding-bottom: 5vh;
+}
+.section-3{
+  height: 125vh;
+  padding-top: 20vh;
+}
+.div-8,.div-12{
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.img-6{
+  padding-right: 10vw;
+}
+}
